; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eapol_supp/extr_eapol_supp_sm.c_eapol_sm_notify_config.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eapol_supp/extr_eapol_supp_sm.c_eapol_sm_notify_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eapol_sm = type { i32, i64, %struct.TYPE_2__, i32, %struct.eap_peer_config* }
%struct.TYPE_2__ = type { i32, i32, i32, i32, i32 }
%struct.eap_peer_config = type { i32 }
%struct.eapol_config = type { i32, i32, i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eapol_sm_notify_config(%struct.eapol_sm* %0, %struct.eap_peer_config* %1, %struct.eapol_config* %2) #0 {
  %4 = alloca %struct.eapol_sm*, align 8
  %5 = alloca %struct.eap_peer_config*, align 8
  %6 = alloca %struct.eapol_config*, align 8
  store %struct.eapol_sm* %0, %struct.eapol_sm** %4, align 8
  store %struct.eap_peer_config* %1, %struct.eap_peer_config** %5, align 8
  store %struct.eapol_config* %2, %struct.eapol_config** %6, align 8
  %7 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %8 = icmp eq %struct.eapol_sm* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %3
  br label %81

10:                                               ; preds = %3
  %11 = load %struct.eap_peer_config*, %struct.eap_peer_config** %5, align 8
  %12 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %13 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %12, i32 0, i32 4
  store %struct.eap_peer_config* %11, %struct.eap_peer_config** %13, align 8
  %14 = load %struct.eapol_config*, %struct.eapol_config** %6, align 8
  %15 = icmp eq %struct.eapol_config* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %10
  br label %81

17:                                               ; preds = %10
  %18 = load %struct.eapol_config*, %struct.eapol_config** %6, align 8
  %19 = getelementptr inbounds %struct.eapol_config, %struct.eapol_config* %18, i32 0, i32 6
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %22 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %21, i32 0, i32 2
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 4
  store i32 %20, i32* %23, align 8
  %24 = load %struct.eapol_config*, %struct.eapol_config** %6, align 8
  %25 = getelementptr inbounds %struct.eapol_config, %struct.eapol_config* %24, i32 0, i32 5
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %28 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %27, i32 0, i32 2
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 3
  store i32 %26, i32* %29, align 4
  %30 = load %struct.eapol_config*, %struct.eapol_config** %6, align 8
  %31 = getelementptr inbounds %struct.eapol_config, %struct.eapol_config* %30, i32 0, i32 3
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %34 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %33, i32 0, i32 2
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 2
  store i32 %32, i32* %35, align 8
  %36 = load %struct.eapol_config*, %struct.eapol_config** %6, align 8
  %37 = getelementptr inbounds %struct.eapol_config, %struct.eapol_config* %36, i32 0, i32 2
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %40 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %39, i32 0, i32 2
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 1
  store i32 %38, i32* %41, align 4
  %42 = load %struct.eapol_config*, %struct.eapol_config** %6, align 8
  %43 = getelementptr inbounds %struct.eapol_config, %struct.eapol_config* %42, i32 0, i32 4
  %44 = load i32, i32* %43, align 4
  %45 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %46 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %45, i32 0, i32 2
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 0
  store i32 %44, i32* %47, align 8
  %48 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %49 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %48, i32 0, i32 1
  %50 = load i64, i64* %49, align 8
  %51 = icmp ne i64 %50, 0
  br i1 %51, label %52, label %81

52:                                               ; preds = %17
  %53 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %54 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %53, i32 0, i32 1
  %55 = load i64, i64* %54, align 8
  %56 = load %struct.eapol_config*, %struct.eapol_config** %6, align 8
  %57 = getelementptr inbounds %struct.eapol_config, %struct.eapol_config* %56, i32 0, i32 3
  %58 = load i32, i32* %57, align 4
  %59 = call i32 @eap_set_fast_reauth(i64 %55, i32 %58)
  %60 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %61 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %60, i32 0, i32 1
  %62 = load i64, i64* %61, align 8
  %63 = load %struct.eapol_config*, %struct.eapol_config** %6, align 8
  %64 = getelementptr inbounds %struct.eapol_config, %struct.eapol_config* %63, i32 0, i32 2
  %65 = load i32, i32* %64, align 4
  %66 = call i32 @eap_set_workaround(i64 %62, i32 %65)
  %67 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %68 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %67, i32 0, i32 1
  %69 = load i64, i64* %68, align 8
  %70 = load %struct.eapol_config*, %struct.eapol_config** %6, align 8
  %71 = getelementptr inbounds %struct.eapol_config, %struct.eapol_config* %70, i32 0, i32 1
  %72 = load i32, i32* %71, align 4
  %73 = call i32 @eap_set_force_disabled(i64 %69, i32 %72)
  %74 = load %struct.eapol_sm*, %struct.eapol_sm** %4, align 8
  %75 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %74, i32 0, i32 1
  %76 = load i64, i64* %75, align 8
  %77 = load %struct.eapol_config*, %struct.eapol_config** %6, align 8
  %78 = getelementptr inbounds %struct.eapol_config, %struct.eapol_config* %77, i32 0, i32 0
  %79 = load i32, i32* %78, align 4
  %80 = call i32 @eap_set_external_sim(i64 %76, i32 %79)
  br label %81

81:                                               ; preds = %9, %16, %52, %17
  ret void
}

declare dso_local i32 @eap_set_fast_reauth(i64, i32) #1

declare dso_local i32 @eap_set_workaround(i64, i32) #1

declare dso_local i32 @eap_set_force_disabled(i64, i32) #1

declare dso_local i32 @eap_set_external_sim(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
